[package]
authors = ["Mankong <mankong@mankong.me>", "siwilizhao <siwilizhao@gmail.com>"]
categories = ["filesystem", "command-line-interface"]
description = "async download file"
documentation = "https://docs.rs/siwi-download"
edition = "2021"
keywords = ["siwi-download", "download", "siwi"]
license = "MIT"
name = "siwi-download"
readme = "README.md"
repository = "https://github.com/rs-videos/siwi-download.git"
version = "0.3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
docs = ["unstable"]
unstable = []

[dependencies]
anyhow = "^1"
chrono = "^0.4"
indicatif = "^0.17"
reqwest = {version = "^0.12", default-features = false, features = [
  "rustls-tls",
  "json",
]}
tokio = {version = "1", features = ["fs", "macros", "rt-multi-thread"]}
tracing = "^0.1"
tracing-subscriber = "0.3"

[[example]]
name = "cli"
path = "examples/cli.rs"

[[example]]
name = "download"
path = "examples/download.rs"
