[package]
authors = ["Mankong <mankong@mankong.me>", "siwilizhao <siwilizhao@gmail.com>"]
categories = ["filesystem", "command-line-interface"]
description = "Downloaders with a pure http implementation support breakpoint continuations"
documentation = "https://docs.rs/siwi-download"
edition = "2024"
keywords = ["siwi-download", "download", "siwi", "downloader"]
license = "MIT"
name = "siwi-download"
readme = "README.md"
repository = "https://github.com/rs-videos/siwi-download.git"
version = "0.4.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
docs = ["unstable"]
unstable = []

[dependencies]
anyhow = "1.0.96"
chrono = {version = "0.4.40", features = ["serde"]}
indicatif = "0.17.11"
reqwest = {version = "^0.12", default-features = false, features = [
  "rustls-tls",
  "json",
]}
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
tokio = {version = "1.43.0", features = ["fs", "macros", "rt-multi-thread"]}
tracing = "0.1.41"
tracing-subscriber = "0.3"

[[example]]
name = "cli"
path = "examples/cli.rs"

[[example]]
name = "download"
path = "examples/download.rs"
